q8s/04-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sent-mobilite
  namespace: chefbe
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |-
      if ($request_uri ~ ^/sondage/) {
        return 301 http://sombreffe-en-transition.be/mobilite/sondage/;
      }
      if ($request_uri ~ ^/mobilite/$) {
        return 302 http://sombreffe-en-transition.be/mobilite/sondage/;
      }
      if ($request_uri !~ ^/mobilite|ics/) {
        return 302 http://sombreffe.reseautransition.be/;
      }
spec:
  rules:
  - host: www.sombreffe-en-transition.be
    http:
      paths:
      - path: /mobilite
        backend:
          serviceName: sent-mobilite
          servicePort: 80
  - host: sombreffe-en-transition.be
    http:
      paths:
      - path: /mobilite
        backend:
          serviceName: sent-mobilite
          servicePort: 80
  - host: www.sombreffe-en-transition.be
    http:
      paths:
      - path: /ics
        backend:
          serviceName: sent-mobilite
          servicePort: 80
  - host: sombreffe-en-transition.be
    http:
      paths:
      - path: /ics
        backend:
          serviceName: sent-mobilite
          servicePort: 80
  - host: www.sombreffe-en-transition.be
    http:
      paths:
      - path: /
        backend:
          serviceName: sent-mobilite
          servicePort: 80
  - host: sombreffe-en-transition.be
    http:
      paths:
      - path: /
        backend:
          serviceName: sent-mobilite
          servicePort: 80
